add: changes to the navigation

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     flex-wrap: wrap;
     background-color: #f5d3ff;
     width: 100%;
-    height: 14vh;
+    height: 125px;
     z-index: 1;
 }
 
